# rapid

./: .build.yml  .gitignore  .gitmodules  CMakeLists.txt  Codegen.idr  LICENSE  Makefile  README.md  Rapid.idr  SexpLexer.idr  SexpParser.idr  build.sh  compile.opt.sh  compile.sh  full.sexp  rapid-cg.ipkg  rapid-fe.ipkg  rapid.ipkg  rapidc.ipkg  runtests.sh  scratch.md  second.sexp  support.ll  tests.sh
.builds/: cmake.yml  freebsd.yml
Compiler/: SteamCG.idr  VMCode.idr  VMCodeSexp.idr
Compiler/Codegen/: VmcodeSexp.idr
Core/: TT.idr
Data/: Sexp.idr
Data/Sexp/: Lexer.idr  Parser.idr
Frontend/: Compile.idr  Rapid.idr
Rapid/: Main.idr
Utils/: Hex.idr
cmake/Modules/: FindIdris2.cmake
llvm/: .gitignore  CMakeLists.txt  lit.cfg
llvm/Passes/: LowerRapidIntrinsics.cpp
llvm/test/: lower_unboxing.ll
rts/: CMakeLists.txt  Makefile  arch_x86-64.S  arch_x86-64.s  builtin.c  builtin.h  gc.c  gc.h  meson.build  net.c  object.c  object.h  rts.c  rts.h  thread.c  time.c
samples/: Hello.idr  bmain.idr  streq.idr
src/: Codegen.idr  Rapid.idr
src/Compiler/: GenLLVMIR.idr  Optimize.idr  PrepareCode.idr  SteamCG.idr  VMCodeSexp.idr
src/Compiler/Codegen/: Rapid.idr  VmcodeSexp.idr
src/Data/: Sexp.idr  Utils.idr
src/Data/Sexp/: Lexer.idr  Parser.idr
src/Rapid/: Driver.idr  Main.idr
support/rapid/: support.ll
tests/chez/chez002/: Pythag.idr  expected
tests/chez/chez004/: Buffer.idr  expected
tests/chez/chez005/: Filter.idr  expected
tests/chez/chez006/: expected
tests/chez/chez009/: expected  uni.idr
tests/chez/chez011/: bangs.idr  expected
tests/chez/rapid001/: Strings.idr  expected
tests/chez/rapid002/: Closures.idr  expected
tests/chez/rapid003/: .gitignore  Files.idr  expected
tests/chez/rapid004/: OverridePrelude.idr  expected
tests/chez/rapid005/: Lazy.idr
tests/chez/rapid006/: SystemInfo.idr  expected
tests/chez/rapid007/: TestPrimIO.idr
tests/chez/rapid008/: Integer.idr  expected
tests/chez/rapid009/: Time.idr  expected
tests/chez/rapid010/: Terminal.idr  expected
tests/chez/rapid011/: NetTest.idr
tests/chez/rapid012/: DoubleOps.idr  expected
tests/chez/reg001/: expected  numbers.idr
